Added df_to_xts function

--- a/README.Rmd
+++ b/README.Rmd
@@ -25,3 +25,11 @@ devtools::install_github("smach/rvisutils.R")
 
 ```
 
+To get a full listing of available functions and links to their help files, run
+
+```{r, echo = TRUE}
+
+help(package="rvisutils")
+
+```
+
