--- a/README.Rmd
+++ b/README.Rmd
@@ -37,22 +37,24 @@ Other favorite R data visualizations not packaged as functions here, because the
 
 *HTML grouped bar chart* -- Check out the [rcdimple package](https://github.com/timelyportfolio/rcdimple). Here is sample code from @timelyportolio:
 
-```{r eval=FALSE}
-mydata %>%
-+   dimple(
-+     x = c("xAxisCategory","BarColor"), y = "value",
-+     groups = "CarColor", type = "bar", width = 590, height = 400
-+   ) %>%
-+   add_legend( x = 60, y = 10, width = 520, height = 20,
-+     horizontalAlign = "left"
-+   ) %>%
-+   default_colors( rainbow(4) )
+```{r }
+library("rcdimple")
+library("gcookbook") # for data
+cabbage_exp %>%
+   dimple(
+     x = c("Date","Cultivar"), y = "Weight",
+     groups = "Cultivar", type = "bar", width = 590, height = 400
+   ) %>%
+   add_legend( x = 60, y = 10, width = 520, height = 20,
+     horizontalAlign = "left"
+   ) %>%
+   default_colors( rainbow(4) )
 
 
 ```
 These can be saved to static images.
 
-*Complex static charts* -- ggplot2. There are lots of examples in the [ggplot2 documentation](http://docs.ggplot2.org/current/). Also see the [R Graphics Cookbook](http://www.cookbook-r.com/Graphs/index.html) , the [R Graph Catalog](http://shinyapps.stat.ubc.ca/r-graph-catalog/). For info on tweaking graphs beyond the type, check [this cheat sheet](http://zevross.com/blog/2014/08/04/beautiful-plotting-in-r-a-ggplot2-cheatsheet-3/).
+**Complex static charts** -- ggplot2. There are lots of examples in the [ggplot2 documentation](http://docs.ggplot2.org/current/). Also see the [R Graphics Cookbook](http://www.cookbook-r.com/Graphs/index.html) , the [R Graph Catalog](http://shinyapps.stat.ubc.ca/r-graph-catalog/). For info on tweaking graphs beyond the type, check [this cheat sheet](http://zevross.com/blog/2014/08/04/beautiful-plotting-in-r-a-ggplot2-cheatsheet-3/).
 
 Here's a sample grouped bar chart:
 
@@ -67,16 +69,15 @@ ggplot(cabbage_exp, aes(x=Date, y=Weight, fill=Cultivar)) +
   geom_text(aes(label=Weight), vjust=1.5, colour="white",
   position=position_dodge(.9), size=3)
 
-
 ```
 
-*Publish interactive versions of ggplot2 visualization on the Web* -- [plotly](https://plot.ly/ggplot2/).
+**Publish interactive versions of ggplot2 visualization on the Web** -- [plotly](https://plot.ly/ggplot2/).
 
-*Interactive HTML maps with points* -- [Leaflet for R](http://rstudio.github.io/leaflet/). There's more info on this in [my tutorial on useful new R packages](http://www.computerworld.com/article/2894448/useful-new-r-packages-for-data-visualization-and-analysis.html).
+**Interactive HTML maps with points** -- [Leaflet for R](http://rstudio.github.io/leaflet/). There's more info on this in [my tutorial on useful new R packages](http://www.computerworld.com/article/2894448/useful-new-r-packages-for-data-visualization-and-analysis.html).
 
-*Interactive HTML choropleth maps* -- [Leaflet for R](http://rstudio.github.io/leaflet/). Also check out out [Kyle Walker's tutorial](http://rpubs.com/walkerke/leaflet_choropleth), which includes reading in shape files and adding pop-ups. 
+**Interactive HTML choropleth maps** -- [Leaflet for R](http://rstudio.github.io/leaflet/). Also check out out [Kyle Walker's tutorial](http://rpubs.com/walkerke/leaflet_choropleth), which includes reading in shape files and adding pop-ups. 
 
-*Static choropleth map of US states/counties or world where proper projection is important* -- maps package with ggplot2 qplot. Example of US counties:
+**Static choropleth map of US states/counties or world where proper projection is important** -- maps package with ggplot2 qplot. Example of US counties:
 
 ```{r message=FALSE}
 library(maps)
@@ -88,10 +89,10 @@ qplot(long, lat, data = counties, geom="polygon",
 
 ```
 
-*Exploratory static choropleth maps if projection isn't important* -- [choroplethr](https://github.com/trulia/choroplethr)
+**Exploratory static choropleth maps if projection isn't important** -- [choroplethr](https://github.com/trulia/choroplethr)
 
 
-*HTML time-series graphing* -- The [dygraphs package](http://rstudio.github.io/dygraphs/) is very easy to use. For converting data frames to xts objects, my rvisutils package's df_to_xts() function may be useful.
+**HTML time-series graphing** -- The [dygraphs package](http://rstudio.github.io/dygraphs/) is very easy to use. For converting data frames to xts objects, my rvisutils package's df_to_xts() function may be useful.
 
 
 
