--- a/README.Rmd
+++ b/README.Rmd
@@ -56,21 +56,6 @@ These can be saved to static images.
 
 **Complex static charts** -- ggplot2. There are lots of examples in the [ggplot2 documentation](http://docs.ggplot2.org/current/). Also see the [R Graphics Cookbook](http://www.cookbook-r.com/Graphs/index.html) , the [R Graph Catalog](http://shinyapps.stat.ubc.ca/r-graph-catalog/). For info on tweaking graphs beyond the type, check [this cheat sheet](http://zevross.com/blog/2014/08/04/beautiful-plotting-in-r-a-ggplot2-cheatsheet-3/).
 
-Here's a sample grouped bar chart with ggplot2:
-
-```{r message=FALSE, warning=FALSE}
-library(gcookbook)
-library(ggplot2)
-ggplot(cabbage_exp, aes(x=Date, y=Weight, fill=Cultivar)) +
-  geom_bar(stat = "identity", position="dodge") +
-  ggtitle("My title") +
-  theme_minimal() +
-  # Adds labels on bars in white:
-  geom_text(aes(label=Weight), vjust=1.5, colour="white",
-  position=position_dodge(.9), size=3)
-
-
-```
 
 **Publish interactive versions of ggplot2 visualization on the Web** -- [plotly](https://plot.ly/ggplot2/).
 
@@ -91,6 +76,17 @@ qplot(long, lat, data = counties, geom="polygon",
 ```
 
 **Exploratory static choropleth maps if projection isn't important** -- [choroplethr](https://github.com/trulia/choroplethr)
+
+**Waffle (square pie) charts** -- [waffle package](https://github.com/hrbrmstr/waffle)
+
+**Calendar heat map** -- googleVis. Sample code:
+
+```{r eval=FALSE}
+dataviz <- gvisCalendar(mydata, datevar="mydate", numvar="myvalue",
+                  options=list(title="myheadline",
+                               width = 1000, height = 8000))
+
+```
 
 
 
